--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -53,7 +53,7 @@
     	\end{algorithmic}
         \end{algorithm}
 
-        其中$rs$指代的是响应小块，它的底面积是1个定位包围框$b$，而高是$b$对应的置信度分数$c$。将所有的这些响应小块$rs$堆叠在一起，就构成了如图\ref{fig.c4_static_skeleton_response}(b) 所示的统计边缘响应$s$。
+        其中$rs$指代的是响应小块，它的底面积是1 个定位包围框$b$，而高是$b$对应的置信度分数$c$。将所有的这些响应小块$rs$堆叠在一起，就构成了如图\ref{fig.c4_static_skeleton_response}(b) 所示的统计边缘响应$s$。
 
         \begin{figure}[htbp]
         \begin{minipage}[t]{0.37\linewidth}
@@ -109,12 +109,29 @@
         \label{fig.c4_candidate_line_construction}
         \end{figure}
 
-        为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$在某1 竖直位置上的变化程度：梯度$g$中的某1 脉冲状红线$l$的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$上这些对应的位置上不存在文字区域与背景区域间的边界。
+        为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$上这些对应的位置上不存在文字区域与背景区域间的边界。
 
-        为了便于观察和分析，首先对梯度值$g$取正，并将其提高至与$hp$统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b)所示，这时得到的梯度值是$g$$'$。最后在梯度值$g$$'$上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，如图\ref{fig.c4_candidate_line_construction}(c)中的红色候选文本行分割线所示。
+        为了便于观察和分析，首先对梯度值$g$取正，并将其提高至与$hp$统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b) 所示，这时得到的梯度值是$g$$'$。最后在梯度值$g$$'$上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，而$L$由如图\ref{fig.c4_candidate_line_construction}(c) 中的$m$条红色候选文本行分割线组成。
 
     \section{二叉树型的文字行搜索空间的构建}
     \esection{Binary Tree-based search space's construction}
+
+    将候选文本行集合$L$展现在场景文字原图上，如图\ref{fig.c4_binary_tree_construction}(b)所示。$L$由$m$ 条红线$l_i, i=1,2,...,m$构成，这些红线是候选文本行分割线，并且在场景文字原图上分割出$m+1$个候选文本行条带，而这些文本行条带就是任两个相邻红线$l_i$和$l_{i+1}$之间的图像区域。那么现阶段的任务是，将所有候选文本行条带区域的排练组合作为1个搜索空间，然后从中搜寻出最优的文本行条带组合，而这些条带区域能恰如其分地覆盖住文字所在的图像区域。
+
+    \begin{figure}[htbp]
+    \centering
+    \includegraphics[width=\textwidth]{./figures/c4_binary_tree_construction.jpg}
+    \begin{minipage}[t]{0.40\linewidth}
+    \centerline{\small (a)二叉树型搜索空间}
+    \end{minipage}
+    \begin{minipage}[t]{0.51\linewidth}
+    \centerline{\small(b)在场景图像中的候选文本行}
+    \end{minipage}
+    \caption{从候选文本行中建立起代表搜索空间的二叉树型数据结构}
+    \label{fig.c4_binary_tree_construction}
+    \end{figure}
+    
+    
 
     \section{搜索最优的文字行定位}
     \esection{Searching the optimal text detection}
