--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -116,7 +116,7 @@
     \section{二叉树型的文字行搜索空间的构建}
     \esection{Binary Tree-based search space's construction}
 
-    将候选文本行集合$L$展现在场景文字原图上，如图\ref{fig.c4_binary_tree_construction}(b) 所示。$L$由$m$ 条红线$l_i, i=1,2,...,m$构成，这些红线是候选文本行分割线，并且在场景文字原图上分割出$m+1$个候选文本行条带，而这些文本行条带就是任两个相邻红线$l_i$和$l_{i+1}$之间的图像区域。那么现阶段的任务是，将所有候选文本行条带区域的排练组合作为1个搜索空间，然后从中搜寻出最优的文本行条带组合，而这些条带区域能恰如其分地覆盖住文字所在的图像区域。
+    将候选文本行集合$L$展现在场景文字原图上，如图\ref{fig.c4_binary_tree_construction}(b) 所示。$L$由$m$ 条红线$l_i, i=1,2,...,m$构成，这些红线是候选文本行分割线，并且在场景文字原图上分割出$m+1$个候选文本行条带，而这些文本行条带就是任两个相邻红线$l_i$和$l_{i+1}$ 之间的图像区域。那么现阶段的任务是，将所有候选文本行条带区域的排练组合作为1个搜索空间，然后从中搜寻出最优的文本行条带组合，而这些条带区域能恰如其分地覆盖住文字所在的图像区域。
 
     \begin{figure}[htbp]
     \centering
@@ -131,7 +131,7 @@
     \label{fig.c4_binary_tree_construction}
     \end{figure}
 
-    假设红色分割线$l_i$有2个属性：距离$ld_i$和置信度$lc_i$。其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331个像素大小。而$lc_i$是分割线$l_i$的置信度，其数值是由$l_i$的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$表征的是$l_3$是文本行之间分割边界的可能性非常大。
+    假设红色分割线$l_i$有2个属性：距离$ld_i$和置信度$lc_i$。其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331个像素大小。而$lc_i$是分割线$l_i$的置信度，其数值是由$l_i$的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
 
     然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$到$l_5$之间的区域，而$n_5$的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
 
@@ -163,14 +163,51 @@
       \STATE end function
 	\end{algorithmic}
     \end{algorithm}
-    
-    那么，通过算法\ref{alg:c4_build_binary_tree}从$L$中构建好的二叉树型搜索空间$N$就将存储在如图中的表格内。下一节，将介绍从搜索空间$N$中搜寻出最优文本行定位的搜索策略。
+
+    那么，通过算法\ref{alg:c4_build_binary_tree} 从$L$中构建好的二叉树型搜索空间$N$就将存储在如图中的表格内。下一节，将介绍从搜索空间$N$ 中搜寻出最优文本行定位的搜索策略。
 
     \section{搜索最优的文字行定位}
     \esection{Searching the optimal text detection}
 
         \subsection{搜索路径}
         \esubsection{Searching the paths}
+
+        给定二叉树型搜索空间$N$,假设$N$是由$m$个结点$n$构成，那么通过算法\ref{alg:c4_search_path}，就可搜索出路径$P={p_1,p_2,...,p_{(m-1)/2}}$。 路径中的每个$p_i \in P$都是1个3元组：包含了父亲结点$np_i$，左子结点$nl_i$和右子结点$nr_i$。
+
+        \begin{algorithm}
+    	\renewcommand{\algorithmicrequire}{\textbf{输入:}}	
+        \renewcommand{\algorithmicensure}{\textbf{输出:}}
+    	\caption{从二叉树型搜索空间中找到最优路径}
+    	\label{alg:c4_search_path}
+    	\begin{algorithmic}[1]
+    		\REQUIRE 二叉树型搜索空间 $N=\left\{n_1,n_2,...,n_m\right\}$， 其中每个结点$n_x \in N$有其相应的属性: 范围$nr_x$ 和值$nv_x$
+    		\ENSURE 搜索到的路径 $P=\left\{p_1,p_2,...,p_{(m-1)/2}\right\}$， 其中每条路径$p_{i} \in P$ 包含结点三元组$p_{i}=\left\{np_{i},nl_{i},nr_{i}\right\}$
+
+          \STATE 初始化: $idx=0$
+          \FOR{$i=1$ to $(m-1)/2$}
+
+          \FOR{$j=1$ to $m$}
+          \IF{$nv_j$ == $leastPositive(NV)$}
+          \STATE $np_i = n_j, nv_j = 0, idx = j$
+          \ENDIF
+
+          \IF{$nr_j[1]$ == $nr_{idx}[1]$ and $nv_j$ == $0$}
+          \STATE $nl_i = n_j, nv_j = -1$
+          \ENDIF
+
+          \IF{$nr_j[2]$ == $nr_{idx}[2]$ and $nv_j$ == $0$}
+          \STATE $nr_i = n_j, nv_j = -1$
+          \ENDIF
+
+          \ENDFOR
+
+          \STATE $p_{i}$ = $\left\{ np_{i},nl_{i},nr_{i} \right\}$
+
+          \ENDFOR
+    	  \end{algorithmic}
+        \end{algorithm}
+
+        算法\ref{alg:c4_search_path}的具体过程如下所述：根据二叉树的性质，如果二叉树$N$中存在$m$个结点，那么算法\ref{alg:c4_search_path}就要迭代执行$(m-2)/2$次。在第$i$次迭代中，首先将具有最小正数值$nv_j \in NV$的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，
 
         \subsection{搜索策略}
         \esubsection{Searching strategies}
