--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -109,14 +109,14 @@
         \label{fig.c4_candidate_line_construction}
         \end{figure}
 
-        为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$ 的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$上这些对应的位置上不存在文字区域与背景区域间的边界。
+        为了确定候选文本行之间的分界线的具体位置，我们在统计边缘响应的横向投影$hp$上计算其梯度$g$,如图\ref{fig.c4_candidate_line_construction}(a) 中的脉冲状红线所示。梯度$g$表征着响应$hp$ 在某1 竖直位置上的变化程度：梯度$g$ 中的某1 脉冲状红线$l$ 的长度越大，就表明在红线$l$的附近越有可能存在着文字区域与背景区域之间的边界。而在梯度$g$中不存在脉冲红线的地方，意味着在这些区域的响应并没有发生突变，因此在$hp$上这些对应的位置上不存在文字区域与背景区域间的边界。
 
         为了便于观察和分析，首先对梯度值$g$取正，并将其提高至与$hp$统一的坐标内，如图\ref{fig.c4_candidate_line_construction}(b) 所示，这时得到的梯度值是$g$$'$。 最后在梯度值$g$$'$上执行非极大值抑制操作，由此消除掉绝大部分较小梯度值的无效脉冲状红线，并得到候选文本行集合$L$，而$L$由如图\ref{fig.c4_candidate_line_construction}(c) 中的$m$条红色候选文本行分割线组成。
 
     \section{二叉树型的文字行搜索空间的构建}
     \esection{Binary Tree-based search space's construction}
 
-    将候选文本行集合$L$展现在场景文字原图上，如图\ref{fig.c4_binary_tree_construction}(b) 所示。$L$由$m$ 条红线$l_i, i=1,2,...,m$构成，这些红线是候选文本行分割线，并且在场景文字原图上分割出$m+1$个候选文本行条带，而这些文本行条带就是任两个相邻红线$l_i$和$l_{i+1}$ 之间的图像区域。那么现阶段的任务是，将所有候选文本行条带区域的排练组合作为1 个搜索空间，然后从中搜寻出最优的文本行条带组合，而这些条带区域能恰如其分地覆盖住文字所在的图像区域。
+    将候选文本行集合$L$展现在场景文字原图上，如图\ref{fig.c4_binary_tree_construction}(b) 所示。$L$由$m$ 条红线$l_i, i=1,2,...,m$ 构成，这些红线是候选文本行分割线，并且在场景文字原图上分割出$m+1$个候选文本行条带，而这些文本行条带就是任两个相邻红线$l_i$和$l_{i+1}$ 之间的图像区域。那么现阶段的任务是，将所有候选文本行条带区域的排练组合作为1 个搜索空间，然后从中搜寻出最优的文本行条带组合，而这些条带区域能恰如其分地覆盖住文字所在的图像区域。
 
     \begin{figure}[htbp]
     \centering
@@ -133,7 +133,7 @@
 
     假设红色分割线$l_i$有2个属性：距离$ld_i$和置信度$lc_i$。其中属性$ld_i$ 指代的是从图像顶部到分割线$l_i$ 位置的距离，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$ld_3=331_{px}$就是指从图像顶部到线$l_3$的距离有331 个像素大小。而$lc_i$是分割线$l_i$的置信度，其数值是由$l_i$的梯度值归一化得到的，例如在图\ref{fig.c4_binary_tree_construction}(b) 中，$lc_3=0.987$ 表征的是$l_3$是文本行之间分割边界的可能性非常大。
 
-    然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$到$l_5$之间的区域，而$n_5$的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
+    然后假设我们要构建的二叉树型搜索空间$N$是由一些结点$n$ 构成的。其中任一结点$n_i$有2个对应的属性：结点代表的图像区域范围$nr_i$，以及结点的数值$nv_i$。以图\ref{fig.c4_binary_tree_construction}(a) 为例，节点$n_5$ 所代表的文本行区域范围是从线$l_3$ 到$l_5$之间的区域，而$n_5$的值是由$l_4$ 的置信度值$lc_4$ 赋予的。
 
     在明确候选文本行分割线$L$，以及二叉树型搜索空间$N$中各变量的含义后，由$L$构建$N$的过程如算法\ref{alg:c4_build_binary_tree} 所示：
 
@@ -207,7 +207,7 @@
     	  \end{algorithmic}
         \end{algorithm}
 
-        算法\ref{alg:c4_binary_tree_search}的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$个结点，那么算法\ref{alg:c4_binary_tree_search}就要迭代执行$(m-2)/2$次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$的范围的左边界$nr_j$[1]相等，且其值$nv_x$须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$的值改为-1。
+        算法\ref{alg:c4_binary_tree_search}的具体过程如下所述：根据二叉树的性质，如果二叉树$N$ 中存在$m$个结点，那么算法\ref{alg:c4_binary_tree_search}就要迭代执行$(m-2)/2$次。在第$i$次迭代中：首先将具有最小正数值$nv_j \in NV$的结点$n_j \in N$，赋予路径三元组中的父亲结点$np_i$，并将$nv_j$ 设为0，从而使结点$n_j$转换为叶子结点；然后在二叉树$N$中寻找能赋予路径三元组中左子结点$nl_i$的1 个结点$n_x$，该结点必须满足下述条件：$n_x$的范围的左边界$nr_x$[1]须和$n_j$的范围的左边界$nr_j$[1] 相等，且其值$nv_x$须为0。那么找到满足要求的结点$n_x$，并将其赋予$nl_i$。 紧接着将该结点的值$nv_x$设为-1，这意味着结点$n_x$ 已被标注为``已处理''，也就是说结点$n_x$ 不会在算法的下一轮迭代中被考虑；类似地，搜索到$n_t$并将其赋予路径三元组中的右子结点$nr_i$，然后将$n_t$的值改为-1。
 
         以上过程是算法\ref{alg:c4_binary_tree_search}的第i 次迭代。那么经过$(m-1)/2$次迭代后，包含$(m-1)/2$个三元组$p$的路径集合$P$就被构建了出来。
 
@@ -226,11 +226,29 @@
         \caption{1个从二叉树型搜索空间中找到最优路径的示例}
         \label{fig.c4_bianry_tree_search}
         \end{figure}
-        
-        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search}所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a)中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7个结点；然后采用算法\ref{alg:c4_build_binary_tree}在$N$上进行搜索，算法将会执行$(7-1)/2=3$次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b)所示；最后，算法的每次迭代，都会生成1个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c)所示的路径集合，即为算法\ref{alg:c4_binary_tree_search}的搜索结果。
+
+        为了更直观地理解算法\ref{alg:c4_binary_tree_search}：从二叉树型搜索空间中找到最优路径的算法，这里用图\ref{fig.c4_bianry_tree_search}所示的例子加以阐述。首先图\ref{fig.c4_bianry_tree_search}(a)中的表格存储的是代表候选文本行搜索空间的二叉树$N$，且在这个例子中，$N$含有7个结点；然后采用算法\ref{alg:c4_build_binary_tree}在$N$上进行搜索，算法将会执行$(7-1)/2=3$ 次迭代，每次迭代的具体过程如图\ref{fig.c4_bianry_tree_search}(b)所示；最后，算法的每次迭代，都会生成1个对应的结点三元组。那么经历3 次迭代后，就会得到如图\ref{fig.c4_bianry_tree_search}(c)所示的路径集合，即为算法\ref{alg:c4_binary_tree_search}的搜索结果。
 
         \subsection{搜索策略}
         \esubsection{Searching strategies}
+
+        得到路径集合$P$后，在$P$上执行搜索策略，以得到最优的文本行定位。以图\ref{fig.c4_search_strategy}(a) 中的1个被搜索到的路径三元组$p_1$为例，$p_1=\left\{np_1,nl_1,nr_1\right\}=\left\{n_6,n_7,n_5\right\}$。 那么对$p_1$的决策将在下列的3项策略中选出并仅选出1种：
+        
+        （1）保留父亲结点$n_6$所代表的融合的文本行区域，而剪掉子结点$n_7$和$n_5$各自所代表的分离的文本行区域；
+        
+        （2）仅保留子结点$n_7$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_6$所代表的融合的文本行区域以及子结点$n_5$所代表的单独的文本行区域；
+        
+        （2）仅保留子结点$n_5$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_6$所代表的融合的文本行区域以及子结点$n_7$所代表的单独的文本行区域；
+
+        \begin{figure}[htbp]
+        \centering
+        \includegraphics[width=\textwidth]{./figures/c4_search_strategy1.jpg}
+        \centerline{\small (a) 1个被搜索到的路径三元组：其中每个结点代表1个候选文本行区域 }
+        \includegraphics[width=\textwidth]{./figures/c4_search_strategy2.jpg}
+        \centerline{\small (b) 对路径三元组的剪枝或融合策略}
+        \caption{ 1个搜索策略的示例}
+        \label{fig.c4_search_strategy}
+        \end{figure}
 
     \section{实验和结果分析}
     \esection{Experimental Results}
