--- a/bibliography.bib
+++ b/bibliography.bib
@@ -36,3 +36,13 @@
   pages={1558-70},
   year={2015},
 }
+
+@article{Jaderberg2016Reading,
+  title={Reading Text in the Wild with Convolutional Neural Networks},
+  author={Jaderberg, Max and Simonyan, Karen and Vedaldi, Andrea and Zisserman, Andrew},
+  journal={International Journal of Computer Vision},
+  volume={116},
+  number={1},
+  pages={1-20},
+  year={2016},
+}
