--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -239,6 +239,8 @@
         （2）仅保留子结点$n_7$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_6$所代表的融合的文本行区域以及子结点$n_5$所代表的单独的文本行区域；
         
         （2）仅保留子结点$n_5$所代表的那部分单独的文本行区域，而剪掉父亲结点$n_6$所代表的融合的文本行区域以及子结点$n_7$所代表的单独的文本行区域；
+        
+        对上述3种策略的选择过程是基于\ref{fig.c4_search_strategy}(b)所示的2阶段的判别步骤，而判别的依据是结点$n_6,n_7$以及$n_5$的识别成绩高低。这里采用的识别模型是Jaderberg等\cite{Jaderberg2016Reading}的深度学习文字识别网络。我们按照结点的范围区域$nr$来截取出包含候选文本行的图块，将其输入文字识别网络，以得到该结点所代表文本行区域的识别成绩，并将其赋予结点的值$nv$。
 
         \begin{figure}[htbp]
         \centering
@@ -249,6 +251,8 @@
         \caption{ 1个搜索策略的示例}
         \label{fig.c4_search_strategy}
         \end{figure}
+        
+        
 
     \section{实验和结果分析}
     \esection{Experimental Results}
