--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,6 +19,16 @@
   year={2002},
 }
 
+@article{Wolf2006Object,
+  title={Object count/area graphs for the evaluation of object detection and segmentation algorithms},
+  author={Wolf, Christian and Jolion, Jean Michel},
+  journal={International Journal of Document Analysis and Recognition},
+  volume={8},
+  number={4},
+  pages={280-296},
+  year={2006},
+}
+
 @inproceedings{Wang2012End,
   title={End-to-end text recognition with convolutional neural networks},
   author={Wang, Tao and Wu, D. J and Coates, A and Ng, A. Y},
