--- a/bibliography.bib
+++ b/bibliography.bib
@@ -37,6 +37,24 @@
   year={2012},
 }
 
+@inproceedings{Neumann2012Real,
+  title={Real-time scene text localization and recognition},
+  author={Neumann, Lukas},
+  booktitle={Computer Vision and Pattern Recognition},
+  pages={3538-3545},
+  year={2012},
+}
+
+@article{Yin2013Robust,
+  title={Robust Text Detection in Natural Scene Images},
+  author={Yin, Xu Cheng and Yin, Xuwang and Huang, Kaizhu and Hao, Hong Wei},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={36},
+  number={5},
+  pages={970-83},
+  year={2013},
+}
+
 @article{Dollar2015Fast,
   title={Fast Edge Detection Using Structured Forests},
   author={Dollar, Piotr and Zitnick, C. Lawrence},
@@ -54,5 +72,28 @@
   volume={116},
   number={1},
   pages={1-20},
+  year={2016},
+}
+
+@article{Tian2016Text,
+  title={Text Flow: A Unified Text Detection System in Natural Scene Images},
+  author={Tian, Shangxuan and Pan, Yifeng and Huang, Chang and Lu, Shijian and Yu, Kai and Tan, Chew Lim},
+  pages={4651-4659},
+  year={2016},
+}
+
+@inproceedings{Zhu2016Text,
+  title={Text detection based on convolutional neural networks with spatial pyramid pooling},
+  author={Zhu, Rui and Mao, Xiao Jiao and Zhu, Qi Hai and Li, Ning and Yang, Yu Bin},
+  booktitle={IEEE International Conference on Image Processing},
+  pages={1032-1036},
+  year={2016},
+}
+
+@inproceedings{Gupta2016Synthetic,
+  title={Synthetic Data for Text Localisation in Natural Images},
+  author={Gupta, Ankush and Vedaldi, Andrea and Zisserman, Andrew},
+  booktitle={Computer Vision and Pattern Recognition},
+  pages={2315-2324},
   year={2016},
 }
